Add register endpoins
